--- a/linkedin/core/templates/core/signup.html
+++ b/linkedin/core/templates/core/signup.html
@@ -9,27 +9,27 @@
     <form method="post" action=".">
         {% csrf_token %}
 
-        <div class="mb-3">
+        <div class="mb-3 flex flex-col">
             <label class="inline-block mb-2">Username</label><br>
             {{ form.username }}
         </div>
 
-         <div class="mb-3">
+         <div class="mb-3 flex flex-col">
             <label class="inline-block mb-2">Email</label><br>
             {{ form.email }}
         </div>
 
-        <div class="mb-3">
+        <div class="mb-3 flex flex-col">
             <label class="inline-block mb-2">Password</label><br>
             {{ form.password1 }}
         </div>
 
-        <div class="mb-3">
+        <div class="mb-3 flex flex-col">
             <label class="inline-block mb-2">Repeat password</label><br>
             {{ form.password2 }}
         </div>
 
-        <div class="mb-3">
+        <div class="mb-3 flex flex-col">
             <label class="inline-block mb-2">Job Title</label><br>
             {{ form.jobtitle }}
         </div>
